<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">优加</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="copyright">Copyright ©2004-2015 huoliclass Corporation.All Rights Reserved</string>
    <string name="username">账号</string>
    <string name="register">注 册</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="password_findback">忘记密码</string>
    <string name="username_none">立即注册</string>
    <string name="verifycode">验证码</string>
    <string name="getverifycode">获取验证码</string>
    <string name="invitationcode">邀请码</string>
    <string name="username_hint">请输入手机号</string>
    <string name="verifycode_hint">请输入验证码</string>
    <string name="password_hint">请输入6至16位密码</string>
    <string name="invitationcode_hint">请输入邀请码</string>
    <string name="txt_getMsgCode_validate">重新获取</string>
    <string name="checkbox_string">我已经阅读并遵守"U+"的协议</string>
    <string name="readme_tv1">我已经阅读并遵守</string>
    <string name="readme_tv2">《“一搜名师”服务协议》</string>
    <string name="username_hint_login">请输入您的手机账号</string>
    <string name="password_hint_login">请输入您的密码</string>
    <string name="findback_password_hint">请输入新密码</string>
    <string name="confirm">确定</string>
    <string name="order">订单</string>
    <string name="finish">完成</string>
    <string name="order_pay_wait">待支付</string>
    <string name="order_pay_num">订单金额：1800.00</string>
    <string name="order_reduce">优惠券</string>
    <string name="order_cancel">取消订单</string>
    <string name="order_pay">付款</string>
    <string name="order_all">全部</string>
    <string name="order_2pay">待付款</string>
    <string name="order_2confirm">待确认</string>
    <string name="order_finish">已完成</string>
    <string name="my_order">我的订单</string>
    <string name="my_detail">账户信息</string>
    <string name="suggest">意见反馈</string>
    <string name="call_us">联系我们</string>
    <string name="my">我的</string>
    <string name="myIcon">头像</string>
    <string name="nickname">昵称</string>
    <string name="name">真实姓名</string>
    <string name="gender">性别</string>
    <string name="school">学校</string>
    <string name="grade">年级</string>
    <string name="className">班级</string>
    <string name="address">家庭住址</string>
</resources>
