<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
     >

    <Button
        android:id="@+id/register"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="151dp"
        android:text="@string/register"
        android:background="#FF6600"
         />

    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register"
        android:layout_below="@+id/register"
        android:layout_marginTop="19dp"
        android:background="#66CCCC"
        android:text="@string/login" />
    
     <Button
        android:id="@+id/order"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register"
        android:layout_centerVertical="true"
        android:background="#66CCCC"
        android:text="@string/order" />
    

</RelativeLayout>
