<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/include_header_login" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="11dp"
        android:background="#EFEFF4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/shapeitem"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/et_account" />

            <AutoCompleteTextView
                android:id="@+id/login_account_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:hint="@string/username_hint_login"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="#C9CACA"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/shapeitem"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/et_psw" />

            <EditText
                android:id="@+id/login_psw_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:hint="@string/password_hint_login"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColor="#C9CACA"
                android:textSize="17sp" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/wide_red_btn"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/login_findback_tv"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/password_findback" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30" />

            <TextView
                android:id="@+id/login_register_tv"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="right|center_vertical"
                android:text="@string/username_none" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>