<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFF4"
    android:orientation="vertical" >

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/include_header_register" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/shapeitem"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_weight="4"
                        android:src="@drawable/et_account" />

                    <EditText
                        android:id="@+id/register_username"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="19"
                        android:background="@null"
                        android:gravity="left|center_vertical"
                        android:hint="@string/username_hint"
                        android:inputType="number"
                        android:maxLength="11"
                        android:textColor="#C9CACA"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="14"
                        android:background="@drawable/shapeitem"
                        android:orientation="horizontal" >

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:layout_weight="4"
                            android:src="@drawable/et_auth" />

                        <EditText
                            android:id="@+id/register_verifycode"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="10"
                            android:background="@null"
                            android:gravity="left|center_vertical"
                            android:hint="@string/verifycode_hint"
                            android:textColor="#C9CACA"
                            android:textSize="17sp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_get_verifycode"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="9"
                        android:background="@drawable/btn_auth"
                        android:gravity="center"
                        android:text="@string/getverifycode"
                        android:textColor="#C9CACA"
                        android:textSize="17sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shapeitem"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:src="@drawable/et_psw" />

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="16"
                    android:background="@null"
                    android:gravity="left|center_vertical"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textColor="#C9CACA"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/see_forbidden_img"
                    android:layout_width="0dp"
                    android:layout_height="19dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:src="@drawable/et_see_forbidden" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shapeitem"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:src="@drawable/et_invi" />

                <EditText
                    android:id="@+id/register_invitationcode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="19"
                    android:background="@null"
                    android:gravity="left|center_vertical"
                    android:hint="@string/invitationcode_hint"
                    android:textColor="#C9CACA"
                    android:textSize="17sp" />
            </LinearLayout>

            <!--
              <CheckBox
        	android:id="@+id/checkbox"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_gravity="left|center"
        	android:text="@string/checkbox_string"
        	android:textSize="13sp" />
            -->

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/check_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/readme_tv1"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readme_tv2"
            android:textColor="#5B0505"
            android:textSize="13sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/wide_red_btn"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</LinearLayout>